# SCView

./: CMakeLists.txt  EntityDescriptorWidget.cpp  EntityDescriptorWidget.h  EntityDescriptorWidget.ui  EntityTypeList.cpp  EntityTypeList.h  ExpressSyntaxHighlighter.cpp  ExpressTextEdit.cpp  ExpressTextEdit.h  ExpressViewDockWidget.cpp  ExpressViewDockWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NavigateCommand.cpp  NavigateCommand.h  README.md  SCLDockWidget.cpp  SCLDockWidget.h  SCLView.pro  SchemaModel.cpp  SchemaModel.h  SchemaTree.cpp  SchemaTree.h  SchemaTreeDockWidget.cpp  SchemaTreeDockWidget.h  main.cpp  manhattanstyle.cpp  manhattanstyle.h  sclview.qrc  ui_EntityDescriptorWidget.h  ui_MainWindow.h
expressg/: EntityItem.cpp  EntityItem.h  ExpressGScene.cpp  ExpressGScene.h  ExpressGView.cpp  ExpressGView.h  ExpressgRectItem.cpp  ExpressgRectItem.h  LinkItem.cpp  LinkItem.h  TypeItem.cpp  TypeItem.h
textView/: ExpressSyntaxHighlighter.cpp  ExpressSyntaxHighlighter.h  ExpressTextEdit.cpp  ExpressTextEdit.h
